DEV: add sql server setup
